[package]
name = "mystiko_static_config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
clap = { version = "4.2.1", features = ["derive"] }
env_logger = { version = "0.10.0" }
log = { version = "0.4.17" }
mystiko_config = { git = "ssh://git@github.com/mystikonetwork/mystiko-rust.git", rev = "b5214a4" }
mystiko_relayer_config = { git = "ssh://git@github.com/mystikonetwork/mystiko-rust.git", rev = "3f25038" }
rusoto_core = { version = "0.48.0" }
rusoto_s3 = { version = "0.48.0" }
serde_json = { version = "1.0.91" }
tokio = { version = "1.26.0", features = ["full"] }
