[package]
name = "mystiko_relayer_abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0.4" }
ethers-core = { version = "2.0.4" }
ethers-contract = { version = "2.0.4" }
ethers-providers = { version = "2.0.4" }

serde = { version = "1.0.152" }