[package]
name = "mystiko_validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0" }
regex = { version = "1.7.1" }
validator = { version = "0.16.0" }
url = "2.5.2"